# graphics_FactoryFlow

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: fragmentShaderForGouraudShading.fs  fragmentShaderForPhongShading.fs  vertexShaderForGouraudShading.vs
src/: basic_camera.h  camera.h  glad.c  main.cpp  pointLight.h  shader.h
